# hypergranola-meeting-assistant

./: DESIGN.md  GITHUB_REPO_SUMMARY.md  IMPLEMENTATION_DOCUMENTATION.md  IMPLEMENTATION_TASKS.md  QUICK_REFERENCE.md  README.md  REPO_CLEANUP_SUMMARY.md  VERSATILE_MEETING_ASSISTANT_FIX.md  cleanup_repo.sh  conversation_architecture.md  enhanced_conversation_architecture.md  implementation_guide.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml
src/: App.css  App.tsx
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  diarization.rs  lib.rs  meeting_context.rs  stt.rs  whisper.rs
src/components/: LiveMeetingSummary.tsx  MeetingContextForm.tsx  MeetingSummaryButton.tsx
src/models/: conversation.ts
src/services/: conversationStorage.ts  fileExportService.ts  researchService.ts  summarizerService.ts
src/test/: conversationTest.ts  renderingTest.tsx
src/utils/: environment.ts
