[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-Wl,--as-needed"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
scraper = "0.19"
rig-core = "0.0.6"
dotenv = "0.15"
futures-util = "0.3"
cpal = "0.16.0"
hound = "3.5.1"
whisper-rs = "0.15.1"
ringbuf = "0.4.8"
dirs = "5.0.1"

